clusters/moo/services/planet.yaml
apiVersion: v1
kind: Service
metadata:
  name: planet
  namespace: socryx-topled
spec:
  ports:
  - name: urbit-http-2
    port: 8080
    targetPort: 8080
  - name: urbit-https-2
    port: 8443
    targetPort: 8443
---
kind: Endpoints
apiVersion: v1
metadata:
  name: planet
  namespace: socryx-topled
subsets:
- addresses:
  - ip: 10.17.12.102
  ports:
  - port: 8080
    name: urbit-http-2
  - port: 8443
    name: urbit-https-2
